--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@ layout: default
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light" data-vide-bg="/assets/media/video/working-space.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 350px;">
+                                    <div class="holder-item holder-item-light" data-vide-bg="https://www.wevideo.com/view/1275487746" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 350px;">
                                         <span class="mask mask-base-1--style-2"></span>
                                         <div class="container slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
                                                 <div class="row">
                                                     <div class="col-lg-6">
                                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated" data-animation-in="fadeInDownBig" data-animation-delay="200">
-                                                            Start your business with Boomerang
+                                                            Grow your business with Everpay
                                                         </h2>
                                                         <p class="lead animated mt-4" data-animation-in="fadeInUpBig" data-animation-delay="200">
-                                                            Boomerang for Startups is an innovative HTML template solution based on Bootstrap 4, which combines beautiful design and flawless functionality.
+                                                            Everpay for Startups is an innovative open payments company, focused on simplifying payments and golabl commerce under one singl;e source.
                                                         </p>
 
                                                         <a href="https://goo.gl/9BbH7R" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
