--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light" data-vide-bg="{{ "/assets/videos/everpay-intro.mp4" | prepend: site.baseurl }}" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 350px;">
+                                    <div class="holder-item holder-item-light" data-vide-bg="{{ "./assets/videos/everpay-intro.mp4" | prepend: site.baseurl }}" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 350px;">
                                         <span class="mask mask-base-1--style-2"></span>
                                         <div class="container slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
