--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ layout: default
                         </div>
                     </section>
 
-                    <section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="{{ "/assets/videos/everpay-intro.mp4 | prepend: site.baseurl }}" data-vide-options="loop: true, muted: false, position: 0% 0%">
+                    <section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="{{ "/assets/videos/video.mp4 | prepend: site.baseurl }}" data-vide-options="loop: true, muted: false, position: 0% 0%">
                         <span class="mask mask-dark--style-1 alpha-7"></span>
                         <div class="container">
                             <div class="col">
