--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light" data-vide-bg="{{ "/assets/videos/everpay-intro.mp4" | prepend: site.baseurl }}" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 350px;">
+                                    <div class="holder-item holder-item-light" data-vide-bg="/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 350px;">
                                         <span class="mask mask-base-1--style-2"></span>
                                         <div class="container slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
@@ -46,7 +46,7 @@ layout: default
                                 <div class="col-12 col-lg-4 animate-on-scroll fadeInDown">
                                     <div class="icon-block icon-block--style-1-v5 px-4">
                                         <div class="block-icon">
-                                            <img src="/assets/images/icons/green/png/positive-dynamic.png">
+                                            <img src="/assets/images/icons/purple/png/positive-dynamic.png">
                                         </div>
                                         <div class="block-content">
                                             <h3 class="heading heading-4 strong-600 text-capitalize">Growing up sales</h3>
@@ -60,7 +60,7 @@ layout: default
                                 <div class="col-12 col-lg-4 animate-on-scroll fadeInDown" data-wow-delay="0.3s">
                                     <div class="icon-block icon-block--style-1-v5 px-4">
                                         <div class="block-icon">
-                                            <img src="/assets/images/icons/green/png/light-on.png">
+                                            <img src="/assets/images/icons/purple/png/light-on.png">
                                         </div>
                                         <div class="block-content">
                                             <h3 class="heading heading-4 strong-600 text-capitalize">Business strategy</h3>
@@ -74,7 +74,7 @@ layout: default
                                 <div class="col-12 col-lg-4 animate-on-scroll fadeInDown" data-wow-delay="0.6s">
                                     <div class="icon-block icon-block--style-1-v5 px-4">
                                         <div class="block-icon">
-                                            <img src="/assets/images/icons/green/png/money-bag.png">
+                                            <img src="/assets/images/icons/purple/png/money-bag.png">
                                         </div>
                                         <div class="block-content">
                                             <h3 class="heading heading-4 strong-600 text-capitalize">Increase profits</h3>
@@ -286,7 +286,7 @@ layout: default
                         </div>
                     </section>
 
-                    <section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="{{ "/assets/videos/video.mp4 | prepend: site.baseurl }}" data-vide-options="loop: true, muted: false, position: 0% 0%">
+                    <section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="/assets/videos/video.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%">
                         <span class="mask mask-dark--style-1 alpha-7"></span>
                         <div class="container">
                             <div class="col">
