--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ layout: default
                                         <span class="mask mask-base-1--style-2"></span>
                                         <div class="container slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
-                                                <div class="row">
-                                                    <div class="col-lg-6">
+                                                <div class="row cols-xs-space cols-sm-space cols-md-space">
+                                                    <div class="col-lg-5 text-center text-lg-left align-self-center">
                                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated" data-animation-in="fadeInDownBig" data-animation-delay="200">
                                                             Grow your business with Everpay
                                                         </h2>
@@ -20,10 +20,16 @@ layout: default
                                                             Everpay for Startups is an innovative open payments company, focused on simplifying payments and golabl commerce under one single source.
                                                         </p>
 
-                                                        <a href="https://goo.gl/9BbH7R" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
+                                                        <a href="https://goo.gl/9BbH7R" target="_blank" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
                                                             See what we do
                                                         </a>
-                                                    </div>
+                                             </div>                  
+
+                                                <div class="col-lg-7 ml-lg-auto align-self-end">
+                                                    <img src="/assets/images/slider/elements/model-m-1.png" class="img-fluid img-center animated animation-ended" data-animation-in="fadeIn" data-animation-delay="200">
+                                                </div>
+                                            </div>
+                                                  
                                                 </div>
                                             </div>
                                         </div>
