--- a/index.html
+++ b/index.html
@@ -94,6 +94,31 @@ layout: default
                         </div>
                     </section>
 
+<section class="slice--offset parallax-section parallax-section-lg border-top border-bottom" style="background-image: url(../../assets/images/backgrounds/slider/img-49.jpg);">
+                        <span class="mask mask-base-1--style-1"></span>
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8 col-md-8 text-center">
+                                    <h1 class="heading heading-inverse heading-2 strong-500 text-normal">
+                                        Always look on the bright side of life.
+                                    </h1>
+
+                                    <span class="clearfix"></span>
+
+                                    <div class="fluid-paragraph fluid-paragraph-sm mt-4 mb-4">
+                                        <p class="lead line-height-1_8 c-white">
+                                            Amazing template! All-in-one, clean code, beautiful design, and really not hard to work with.
+                                            Highly recommended for any kind on website.
+                                        </p>
+                                    </div>
+
+                                    <div class="btn-container mt-5">
+                                        <a href="homepage-business.html#" class="btn btn-styled btn-white btn-circle">Learn more</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                     <section class="slice-lg sct-color-1">
                         <div class="container">
                             <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center">
@@ -199,7 +224,29 @@ layout: default
                         </div>
                     </section>
 
-                    <section class="slice-xl pt-5 sct-color-1">
+<section class="slice-sm bg-base-1">
+                        <div class="container sct-inner">
+                            <div class="row align-items-center cols-md-space cols-sm-space cols-xs-space">
+                                <div class="col-lg-9">
+                                    <div class="text-center text-md-left">
+                                        <h1 class="heading heading-4 c-base-text-1 text-normal strong-500">
+                                           Everpay <sup>3</sup> delivers content beyond the desktop. Make it yours!
+                                        </h1>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-3">
+                                    <div class="text-center text-lg-right">
+                                        <a href="homepage-business.html#" class="btn btn-styled btn-lg btn-white btn-circle btn-outline">
+                                            Purchase now
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>                    
+
+<section class="slice-xl pt-5 sct-color-1">
                         <div class="container">
                             <div class="section-title section-title--style-1 text-center mb-2 animate-on-scroll fadeInDown">
                                 <h3 class="section-title-inner text-normal strong-600">
@@ -291,6 +338,9 @@ layout: default
                             </div>
                         </div>
                     </section>
+
+
+
 
                     <section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="/assets/videos/video.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%">
                         <span class="mask mask-dark--style-1 alpha-7"></span>
