Update and rename pricing.md to pricing.html

--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@ title: Our Pricing
 permalink: /pricing/
 ---
 
-<section class="slice-lg sct-color-3 holder-item holder-item-dark has-bg-cover bg-size-contain" style="background-image:  url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1457566689/big-resto_bkvv08.jpg); background-position: center center;">
+<section class="slice-lg sct-color-3 holder-item holder-item-dark has-bg-cover bg-size-cover" style="background-image:  url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: center center;">
   <div class="container container-sm d-flex align-items-center">
         <div class="col">
 <div class="row py-3 text-center justify-content-center">
