Update and rename about.md to about.html

--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@ permalink: /about/
 <span class="clearfix"></span>
 
 <div class="fluid-paragraph fluid-paragraph-sm text-center">
-          <p class="text-lg c-gray-light">Start building fast, beautiful and modern looking websites in no time using our theme.</p>
+<p class="text-lg c-gray-light">Start taking payments fast, easy and secure commerce in no time using our solutions.</p>
                             </div>
 
 <span class="space-xs-xl"></span>
