--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 permalink: /about/
 ---
 
-<section class="slice-lg slice--offset-top has-bg-cover bg-size-cover" style="background-image: url(/assets/images/backgrounds/slider/img-26.jpg); background-position: left center;">
+<section class="slice-lg slice--offset-top has-bg-cover bg-size-cover" style="background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1491557670/bg-pattern-8_arr1zm.png); background-position: left center;">
                         <span class="mask mask-dark--style-1"></span>
                         <div class="container relative">
                             <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center text-left">
