Update and rename contact.md to contact.html

--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,59 @@ title: Contact us
 permalink: /contact/
 ---
 
-<!-- Slider Start -->
-<section id="global-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h1>Drop Us A Note</h1>
-          <p>Don’t just take our word for it. Check out some of our latest work.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<section class="slice-xl" style="background-image: url(/assets/images/backgrounds/slider/img-44.jpg); background-position: bottom center;">
+<span class="mask mask-dark--style-1"></span>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="py-5 text-center">
+                                        <h1 class="heading heading-1 c-white strong-400 text-normal">
+                                            Let's talk about your project
+                                        </h1>
+<span class="clearfix"></span>
+ <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center c-white mt-3">
+                    Start building fast, beautiful and modern looking websites in no time using our theme.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+ </section>
+
+<section class="slice">
+                        <div class="container">
+                            <div class="row align-items-center cols-xs-space cols-sm-space cols-md-space">
+                                <div class="col-lg-6 mt--150">
+                                    <!-- Map canvas -->
+                                    <div id="google-map">
+                                        <!-- #google-container will contain the map  -->
+                                    </div>
+                                </div>
+                            </div>
+                          
+<div class="col-lg-5 ml-lg-auto">
+           <h3 class="heading heading-3 strong-300">
+                                        150 Southeast Pidgeon Meadow
+                                        <br>
+                                        Claflin Terrace, 305458
+                                    </h3>
+
+ <p class="lead mt-4 mb-4">
+         E: <a href="#">support@webpixels.io</a>
+         <br>
+         T: 0755.222.333
+                                    </p>
+<p class="">
+       Everpay is a complete commerce solution based on Open Banking and Open Commerce Payments.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+
 <!-- contact form start -->
-<section id="contact-form">
+<section id="contact-form" class="hidden" style="display:none">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12">
