--- a/contact.html
+++ b/contact.html
@@ -133,3 +133,6 @@ permalink: /contact/
                             </div>
                         </div>
                     </section>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBuyKngB9VC3zgY_uEB-DKL9BKYMekbeY&callback=initMap" type="text/javascript"></script>
+<script src="/assets/js/google-maps/google-maps-blue.js"></script>
