--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,7 @@ permalink: /contact/
                                       
                                     </div>
                                 </div>
-                            </div>
-                          
+ 
 <div class="col-lg-5 ml-lg-auto">
            <h3 class="heading heading-3 strong-300">
                                         150 Southeast Pidgeon Meadow
@@ -55,8 +54,10 @@ permalink: /contact/
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                    </section>
+                        </div>                            
+  </div>
+ </section>
+
 <section class="slice sct-color-1" id="nextSection">
                         <div class="container">
                             <div class="row cols-xs-space cols-sm-space cols-md-space">
@@ -129,6 +130,87 @@ permalink: /contact/
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+<section class="slice sct-color-1">
+                        <div class="container">
+                            <div class="section-title section-title--style-1 text-center mb-2">
+                                <h3 class="section-title-inner text-normal">
+                                    Drop us a line
+                                </h3>
+                                <span class="section-title-delimiter clearfix d-none"></span>
+                            </div>
+
+                            <span class="clearfix"></span>
+
+                            <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center">
+                                Start building fast, beautiful and modern looking websites in no time using our theme.
+                            </div>
+
+                            <span class="space-xs-xl"></span>
+
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Contact form -->
+                                    <form id="form_contact" data-action="../../php/send-email.php" class="form-default" role="form">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="form-group has-feedback">
+                                                    <label for="" class="text-uppercase c-gray-light">Your name</label>
+                                                    <input type="text" name="name" class="form-control form-control-lg" required="">
+                                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                                    <div class="help-block with-errors"></div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-group has-feedback">
+                                                    <label for="" class="text-uppercase c-gray-light">Email address</label>
+                                                    <input type="email" name="email" class="form-control form-control-lg" required="">
+                                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                                    <div class="help-block with-errors"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="form-group has-feedback">
+                                                    <label for="" class="text-uppercase c-gray-light">Website</label>
+                                                    <input type="text" name="website" class="form-control form-control-lg" required="">
+                                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                                    <div class="help-block with-errors"></div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <div class="form-group has-feedback">
+                                                    <label for="" class="text-uppercase c-gray-light">Phone</label>
+                                                    <input type="text" name="phone" class="form-control form-control-lg" required="">
+                                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                                    <div class="help-block with-errors"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div class="form-group has-feedback">
+                                                    <label for="" class="text-uppercase c-gray-light">Message</label>
+                                                    <textarea name="message" class="form-control no-resize" rows="5" required=""></textarea>
+                                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                                    <div class="help-block with-errors"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="">
+                                            <div class="g-recaptcha mt-3" data-sitekey="6Lfs5ScUAAAAANAJwGrdfvWLFRRiVbKRE2vfoaFj"><div style="width: 304px; height: 78px;"><div><iframe src="https://www.google.com/recaptcha/api2/anchor?ar=1&amp;k=6Lfs5ScUAAAAANAJwGrdfvWLFRRiVbKRE2vfoaFj&amp;co=ZmlsZTo.&amp;hl=en&amp;v=v1546842739564&amp;size=normal&amp;cb=r1pd1iuc72s" width="304" height="78" role="presentation" name="a-px4qvpln66zp" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox"></iframe></div><textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response" style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea></div></div>
+
+                                            <button type="reset" class="btn-reset d-none"></button>
+                                            <button type="submit" class="btn btn-styled btn-base-1 mt-4">Send message</button>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
