--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@ permalink: /contact/
                                         </h1>
 <span class="clearfix"></span>
  <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center c-white mt-3">
-                    Start building fast, beautiful and modern looking websites in no time using our theme.
+                    Start taking payments fast in no time using our solutions.
                                         </div>
                                     </div>
                                 </div>
