--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@ permalink: /contact/
                                     </h3>
 
  <p class="lead mt-4 mb-4">
-         E: <a href="#">support@webpixels.io</a>
+         E: <a href="#">support@everpayinc.com</a>
          <br>
          T: 0755.222.333
                                     </p>
