--- a/contact.html
+++ b/contact.html
@@ -39,18 +39,20 @@ permalink: /contact/
  
 <div class="col-lg-5 ml-lg-auto">
            <h3 class="heading heading-3 strong-300">
-                                        150 Southeast Pidgeon Meadow
+                                        5700 Yonge Street, Suite 200
                                         <br>
-                                        Claflin Terrace, 305458
-                                    </h3>
+                                        Toronto, ON, M2M4K2
+                                         <br>        
+                                        Canada
+  </h3>
 
  <p class="lead mt-4 mb-4">
          E: <a href="#">support@everpayinc.com</a>
          <br>
-         T: 0755.222.333
-                                    </p>
+         T: +1(800)566-6003
+     </p>
 <p class="">
-       Everpay is a complete commerce solution based on Open Banking and Open Commerce Payments.
+       Everpay is a complete commerce solution based on Open Banking and Open Commerce solutions.
                                     </p>
                                 </div>
                             </div>
@@ -75,7 +77,7 @@ permalink: /contact/
                                                     <p>
                                                         Lorem ipsum dolor sit amet consectetur adipiscing  eiusmod tempor.
                                                     </p>
-                                                    <a href="contact-1.html#" class="link link-sm link--style-2 strong-600 c-gray-dark">
+                                                    <a href="#" class="link link-sm link--style-2 strong-600 c-gray-dark">
                                                         sales@example.com
                                                     </a>
                                                 </div>
